Make sure treeview entry focus is visible
focused entry has a 1px border, make sure there is a space for it
in the treeview so we can see laft and right border

also make sure it works with RTL

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -320,6 +320,8 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 	overflow-y: auto;
 	overflow-x: hidden;
 	max-width: 1000px;
+	padding: 1px;
+	padding-inline-end: 3px;
 }
 
 .ui-treeview.disabled {
@@ -362,7 +364,8 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 }
 
 .ui-treeview-entry:not(.autofilter) {
-	padding-left: 2px;
+	padding-inline-start: 2px;
+	margin-inline-end: 2px;
 	background-color: var(--color-background-lighter);
 }
 
